[gd_scene load_steps=4 format=3 uid="uid://icjdf0pahdyx"]

[ext_resource type="Script" uid="uid://02emnfcogxl7" path="res://scripts/menus/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://c40o612s66c43" path="res://images/svart.png" id="2_myx47"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kukqi"]
texture = ExtResource("2_myx47")
modulate_color = Color(1, 1, 1, 0.513726)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_kukqi")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 298.0
offset_top = 216.0
offset_right = 854.0
offset_bottom = 551.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1

[node name="btn_resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="btn_options" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="btn_main_menu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "EXIT TO MAIN MENU"

[node name="btn_quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "QUIT"
